--- a/exercise02.html
+++ b/exercise02.html
@@ -13,8 +13,8 @@
     <h2>About Me</h2>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum molestie, est vitae ultricies vulputate, velit sapien suscipit purus, nec tincidunt nisl dui eleifend enim. Ut semper tristique nulla ut facilisis. Sed in lacus porta, tempus quam in, dignissim felis. Praesent ultricies, mi ut interdum lobortis, ex felis blandit felis, eu eleifend felis erat a metus. Aenean malesuada rutrum diam, nec lacinia tellus. Fusce egestas, purus ac bibendum ullamcorper, ante est fringilla elit, a eleifend lacus libero vel enim. Fusce interdum, nisl sit amet porttitor convallis, dui magna fermentum purus, quis efficitur tellus metus vel ligula. Ut fermentum accumsan odio, nec suscipit lectus euismod eget. Curabitur pretium justo in nisi ullamcorper laoreet. Duis interdum massa nisl, sed aliquam enim vulputate non. Sed dapibus non sapien ac viverra. Morbi quis mi sodales augue pretium ultrices. Suspendisse nibh eros, tempor eu nulla eget, vulputate ultricies arcu. Ut semper felis eget rhoncus consequat. Vivamus sed mollis mauris. Sed a eros egestas nibh bibendum suscipit.</p>
     <figure>
-        <img src=" https://collections.britishart.yale.edu/catalog/tms:28227" alt="ink portrait of a woman">
-        <figcaption> An ink portrait by Benjamin Robert Haydon in place of a headshot. </figcaption>
+        <img src=" https://pdimagearchive.org/images/aa72b76f-ae19-4e90-bc52-c182a45f3a86/" alt="The Circulating Library">
+        <figcaption> An approximate depiction of the website's author. </figcaption>
     </figure>
 </article>
 </body>
