--- a/exercise03.html
+++ b/exercise03.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head> <title>Hello World: An Introductory Website</title>
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="styles.css">
     </head>
 <body>
     <header>
