--- a/exercise04.html
+++ b/exercise04.html
@@ -1,1 +1,12 @@
 <! DOCTYPE html> 
+<html lang="en">
+  <head>
+      <meta charset="utf-8"/>
+    <title>=Hello! World!</title>
+    <link rel= href= />
+  </head>
+  <header>
+    <h1>Hello World!</h1>
+  </header>
+  
+</html>
