--- a/myfavoritethings.html
+++ b/myfavoritethings.html
@@ -8,19 +8,19 @@
     <header>
     <h1>My Hobbies</h1>
       <figure>
-        <img src="" alt="Knitting" >
+        <img src="knitting" alt="Knitting" >
        <figcaption> Knitting </figcaption>
       </figure>
          <figure>
-        <img src="" alt="Reading">
+        <img src="reading" alt="Reading">
         <figcaption> Reading </figcaption>
     </figure>
       <figure>
-        <img src="" alt="Stardew Valley">
+        <img src="stardewvalley" alt="Stardew Valley">
           <figcaption> Stardew Valley </figcaption>
       </figure>
       <figure>
-        <img src="" alt="Hiking"
+        <img src="hiking" alt="Hiking"
           <figcaption> Hiking </figcaption> 
       </figure>
 </article>
