--- a/exercise05.html
+++ b/exercise05.html
@@ -18,5 +18,7 @@
         <figcaption> An approximate depiction of the website's author. </figcaption>
     </figure>
 </article>
+    <article> <h2> <a href =myfavoritethings.html > My Hobbies </a> </h2>
+    </article>
 </body>
 </html>
