--- a/myfavoritethings.html
+++ b/myfavoritethings.html
@@ -16,7 +16,7 @@
         <figcaption> Reading </figcaption>
     </figure>
       <figure>
-        <img src="stardewvalley" alt="Stardew Valley">
+        <img src="stardewvalley0" alt="Stardew Valley">
           <figcaption> Stardew Valley </figcaption>
       </figure>
       <figure>
