--- a/exercise05.html
+++ b/exercise05.html
@@ -20,5 +20,7 @@
 </article>
     <article> <h2> <a href =myfavoritethings.html > My Hobbies </a> </h2>
     </article>
+     <article> <h2> <a href =https://publicdomainreview.org/ > My Favorite Website </a> </h2>
+  </article>
 </body>
 </html>
