--- a/myfavoritethings.html
+++ b/myfavoritethings.html
@@ -16,11 +16,11 @@
         <figcaption> Reading </figcaption>
     </figure>
       <figure>
-        <img src="stardewvalley0" alt="Stardew Valley">
+        <img src="stardewvalley.png" alt="Stardew Valley">
           <figcaption> Stardew Valley </figcaption>
       </figure>
       <figure>
-        <img src="hiking" alt="Hiking"
+        <img src="hiking.png" alt="Hiking"
           <figcaption> Hiking </figcaption> 
       </figure>
 </article>
