--- a/about.html
+++ b/about.html
@@ -3,6 +3,22 @@
     <head> <title>Hello World:About</title>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="styles.css">
+        </head>
+    <nav>
+      <ul>
+        <li>
+          <a href="exercise04.html">Home</a>
+        </li>
+        <li>
+          <a href="myfavoritethings.html">My Hobbies</a>
+        </li>
+        <li>
+          <a href="https://publicdomainreview.org">My Favorite Website</a>
+        </li>
+        <li>
+          <a href="about.html">About Me</a>
+        </li>
+      </ul>
     </head>
   <body>
 <article>
