--- a/myfavoritethings.html
+++ b/myfavoritethings.html
@@ -4,23 +4,38 @@
         <meta charset="UTF-8">
         <link rel="stylesheet" href="styles.css">
     </head>
+    <nav>
+      <ul>
+        <li>
+          <a href="exercise04.html">Home</a>
+        </li>
+        <li>
+          <a href="myfavoritethings.html">My Hobbies</a>
+        </li>
+        <li>
+          <a href="https://publicdomainreview.org">My Favorite Website</a>
+        </li>
+        <li>
+          <a href="about.html">About Me</a>
+        </li>
+      </ul>
 <body>
     <header>
     <h1>My Hobbies</h1>
       <figure>
-        <img src="knitting" alt="Knitting" >
+        <img src="knitting" alt="An image of three knitting projects and knitting needles" >
        <figcaption> Knitting </figcaption>
       </figure>
          <figure>
-        <img src="reading" alt="Reading">
+        <img src="reading" alt="A stack of books">
         <figcaption> Reading </figcaption>
     </figure>
       <figure>
-        <img src="stardewvalley.png" alt="Stardew Valley">
+        <img src="stardewvalley.png" alt="Stardew Valley Logo">
           <figcaption> Stardew Valley </figcaption>
       </figure>
       <figure>
-        <img src="hiking.png" alt="Hiking"
+        <img src="hiking.png" alt="Photo of two people hiking in the mountains"
           <figcaption> Hiking </figcaption> 
       </figure>
 </article>
