commit and push

--- a/exercise06.html
+++ b/exercise06.html
@@ -2,7 +2,29 @@
 <html lang="en">
     <head> <title>🏶</title>
         <meta charset="UTF-8">
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="styles2.css">
     </head>
-    <h1>Welcome!</h1>
+    <body>
+        <header>
+    <h1>My Website</h1>
+    <nav>
+      <ul>
+        <li>
+          <a href="exercise04.html">Home</a>
+        </li>
+        <li>
+          <a href="myfavoritethings.html">My Hobbies</a>
+        </li>
+        <li>
+          <a href="https://publicdomainreview.org">My Favorite Website</a>
+        </li>
+        <li>
+          <a href="about.html">About Me</a>
+        </li>
+      </ul>
+      </header>
+      <h2>
     
+      </h2>
+      <img src="" alt="" class="center" > 
+</body>
