Revise HTML structure for knitting history theme
Updated the structure and content of the HTML file to reflect a new theme focused on knitting history.

--- a/exercise06.html
+++ b/exercise06.html
@@ -1,30 +1,30 @@
-<!DOCTYPE html>
+<! DOCTYPE html>
 <html lang="en">
-    <head> <title>🏶</title>
+    <head>
         <meta charset="UTF-8">
-        <link rel="stylesheet" href="styles2.css">
+        <title> Kniting History</title>
+        <link rel="stylesheet" href= "styles3.css"
     </head>
     <body>
-        <header>
-    <h1>My Website</h1>
-    <nav>
-      <ul>
-        <li>
-          <a href="exercise04.html">Home</a>
-        </li>
-        <li>
-          <a href="myfavoritethings.html">My Hobbies</a>
-        </li>
-        <li>
-          <a href="https://publicdomainreview.org">My Favorite Website</a>
-        </li>
-        <li>
-          <a href="about.html">About Me</a>
-        </li>
-      </ul>
-      </header>
-      <h2>
-    
-      </h2>
-      <img src="" alt="" class="center" > 
-</body>
+        <header> 
+            <h1>A History of Knitting </h1>
+            <nav>
+                <ul>
+                    <li><a href="About">About</a></li>
+                    <li><a href="earlyknitting">Early Knitting</a>/li>
+                    <li><a href="knittingmotifs"> Kniting Motifs</a>a></li>
+                    <li><a href="resources">Resources></a></li>
+                </ul>
+            </nav>
+            </header>
+
+        <section id=About>
+            <h2> About</h2>
+            <p> Knitting is a craft that dates back thousands of years! This website aims to explore and share that long storied history that spans the whole globe. </p>
+
+        <section id=earlyknitting>
+          <h2> Early Knitting</h2>
+
+            <section id=paternsinknitting>
+                <h2> Knitting Motifs</h2>
+    </body>
