--- a/exercise06.html
+++ b/exercise06.html
@@ -27,4 +27,10 @@
 
             <section id=paternsinknitting>
                 <h2> Knitting Motifs</h2>
+
+            <section id=resources>
+                <h2> Works on Knitting</h2>
     </body>
+                <footer>
+                    
+                </footer>
