Fix HTML syntax in exercise06.html

--- a/exercise06.html
+++ b/exercise06.html
@@ -11,8 +11,8 @@
             <nav>
                 <ul>
                     <li><a href="About">About</a></li>
-                    <li><a href="earlyknitting">Early Knitting</a>/li>
-                    <li><a href="knittingmotifs"> Kniting Motifs</a>a></li>
+                    <li><a href="earlyknitting">Early Knitting</a></li>
+                    <li><a href="knittingmotifs"> Kniting Motifs</a></li>
                     <li><a href="resources">Resources></a></li>
                 </ul>
             </nav>
