--- a/exercise06.html
+++ b/exercise06.html
@@ -22,7 +22,7 @@
 <body>
     <header>
     <h1>Hello World!</h1>
-    <p> Hello World! Welcome to my website.</p>
+    <h3> Hello World! Welcome to my website.</h3>
     <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/97/The_Earth_seen_from_Apollo_17.jpg/512px-The_Earth_seen_from_Apollo_17.jpg?20200925203546" alt= "The Earth seen from Apollo 17"  <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/97/The_Earth_seen_from_Apollo_17.jpg/512px-The_Earth_seen_from_Apollo_17.jpg?20200925203546" alt= "The Earth seen from Apollo 17" width="500" height="600" class="center"> 
 </header>
 </body>
