Enhance hobby section with details and fixes
Added descriptions for hobbies and corrected typos.

--- a/myfavoritethings.html
+++ b/myfavoritethings.html
@@ -22,22 +22,36 @@
 <body>
     <header>
     <h1>My Hobbies</h1>
+    <div class="hobby">
+        <H2>Knitting</H2>
       <figure>
         <img src="knitting" alt="An image of three knitting projects and knitting needles" >
-       <figcaption> Knitting </figcaption>
+       <p> I've been kniting for 20 years! I love to make sweaters, hats, and socks. </p>
       </figure>
+</div>
+        
          <figure>
+        <div class="hobby">
+            <h2>Reading</h2>
         <img src="reading" alt="A stack of books">
-        <figcaption> Reading </figcaption>
-    </figure>
+            <p> Some of my favorite books are Swanns Way, Jude the Obscure, 100 Years of Solitude and The Magic Mountain.</p>
+        </div>
+ 
+            <div class="hobby">
+                <h2> Video Games</h2>
+                <p> I love to play Stardew Valley and Animal Crossing.</p>
       <figure>
         <img src="stardewvalley.png" alt="Stardew Valley Logo">
-          <figcaption> Stardew Valley </figcaption>
       </figure>
+            </div>   
+             
+    <div class="hobby">
+     <h2>Hiking</h2>
       <figure>
         <img src="hiking.png" alt="Photo of two people hiking in the mountains"
           <figcaption> Hiking </figcaption> 
+          <p> I grew up hiking. Some of my favorite trails I've done have been in  the Ancient Bristlecone National Forest, Yellowstone National Park, Reserva Natural Volcán Mombacho in Nicaragua, and the John Muir Wilderness.  </p>
       </figure>
-</article>
+    </div>
 </body>
 </html>
