--- a/about.html
+++ b/about.html
@@ -22,12 +22,22 @@
     </head>
   <body>
 <article>
-    <h1>About Me</h1>
-                    <h2>An Introduction </h2>
-    <p>One morning, when Gregor Samsa woke from troubled dreams, he found himself transformed in his bed into a horrible vermin. He lay on his armour-like back, and if he lifted his head a little he could see his brown belly, slightly domed and divided by arches into stiff sections. The bedding was hardly able to cover it and seemed ready to slide off any moment. His many legs, pitifully thin compared with the size of the rest of him, waved about helplessly as he looked. "What's happened to me?" he thought. It wasn't a dream. His room, a proper human room although a little too small, lay peacefully between its four familiar walls. A collection of textile samples lay spread out on the table - Samsa was a travelling salesman - and above it there hung a picture that he had recently cut out of an illustrated magazine and housed in a nice, gilded frame. It showed a lady fitted out with a fur hat and fur boa who sat upright, raising a heavy fur muff that covered the whole of her lower arm towards the viewer. Gregor then turned to look out the window at the dull weather. Drops of rain could be heard hitting the pane, which made him feel quite sad. "How about if I sleep a little bit longer and forget all this nonsense", he thought, but that was something he was unable to do because he was used to sleeping on his right, and in his present state couldn't get into that position. However hard he threw himself onto his right, he always rolled back to where he was. He must have tried it a hundred times, shut his eyes so that he wouldn't have to look at the floundering legs, and only stopped when he began to feel a mild, dull pain there that he had never felt before</p>
-    <figure>
-        <h2> Author Photo </h2>
-        <img src="nov-2023-prints-00032.jpg" alt="The Circulating Library" alt="Drawing of a woman made out of books" />
+    <div id="fun-facts">
+                <h2>Fun Facts About Me</h2>
+                <ul>
+                    <li> I work at the Newberry Library</li>
+                    <li> I want to work as an archivist at a textile history institution </li>
+                    <li> I speak Swedish and Spanish fluently </li>
+                    <li>I can knit a sweater in two weeks</li>
+                    <li>My favorite color is green</li>
+                </ul>
+            </div>
+    <div id="author-photo">
+                <h2>Author Photo</h2>
+                <figure>
+                    <img src="nov-2023-prints-00032.jpg" alt="Drawing of a woman made out of books" />
+                </figure>
+            </div>
     </figure>
 </article>
   </body>
