--- a/exercise06.html
+++ b/exercise06.html
@@ -1,25 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head> <title>Hello World: An Introductory Website</title>
+    <head>
+        <title>Hello World: About</title>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="styles.css">
     </head>
-    <nav>
-      <ul>
-        <li>
-          <a href="exercise04.html">Home</a>
-        </li>
-        <li>
-          <a href="myfavoritethings.html">My Hobbies</a>
-        </li>
-        <li>
-          <a href="https://publicdomainreview.org">My Favorite Website</a>
-        </li>
-        <li>
-          <a href="about.html">About Me</a>
-        </li>
-      </ul>
-<body>
+    <body>
+        <nav id="main-navigation">
+            <ul>
+                <li>
+                    <a href="exercise06.html">Home</a>
+                </li>
+                <li>
+                    <a href="myfavoritethings.html">My Hobbies</a>
+                </li>
+                <li>
+                    <a href="https://publicdomainreview.org">My Favorite Website</a>
+                </li>
+                <li>
+                    <a href="about.html">About Me</a>
+                </li>
+            </ul>
+        </nav>
     <header>
     <h1>Hello World!</h1>
     <p> Hello World! Welcome to my website.</p>
