--- a/myfavoritethings.html
+++ b/myfavoritethings.html
@@ -1,56 +1,31 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head> <title>Hello World!</title>
-        <meta charset="UTF-8">
-        <link rel="stylesheet" href="styles.css">
-    </head>
-    <nav>
-      <ul>
-        <li>
-          <a href="exercise04.html">Home</a>
-        </li>
-        <li>
-          <a href="myfavoritethings.html">My Hobbies</a>
-        </li>
-        <li>
-          <a href="https://publicdomainreview.org">My Favorite Website</a>
-        </li>
-        <li>
-          <a href="about.html">About Me</a>
-        </li>
-      </ul>
-<body>
-    <header>
-    <h1>My Hobbies</h1>
-    <div class="hobby">
-        <H2>Knitting</H2>
-      <figure>
-        <img src="knitting" alt="An image of three knitting projects and knitting needles" >
-       <p> I've been kniting for 20 years! I love to make sweaters, hats, and socks. </p>
-      </figure>
+<div class="hobby">
+    <h2>Knitting</h2>
+    <figure>
+        <img class="center" src="knitting.jpg" alt="An image of three knitting projects and knitting needles">
+    </figure>
+    <p>I've been knitting for 20 years! I love to make sweaters, hats, and socks.</p>
 </div>
-        
-         <figure>
-        <div class="hobby">
-            <h2>Reading</h2>
-        <img src="reading" alt="A stack of books">
-            <p> Some of my favorite books are Swanns Way, Jude the Obscure, 100 Years of Solitude and The Magic Mountain.</p>
-        </div>
- 
-            <div class="hobby">
-                <h2> Video Games</h2>
-      <figure>
-        <img src="stardewvalley.png" alt="Stardew Valley Logo">
-           <p> I love to play Stardew Valley and Animal Crossing.</p>
-      </figure>
-            </div>   
-             
-    <div class="hobby">
-     <h2>Hiking</h2>
-      <figure>
-        <img src="hiking.png" alt="Photo of two people hiking in the mountains"
-          <p> I grew up hiking. Some of my favorite trails I've done have been in  the Ancient Bristlecone National Forest, Yellowstone National Park, Reserva Natural Volcán Mombacho in Nicaragua, and the John Muir Wilderness.  </p>
-      </figure>
-    </div>
-</body>
-</html>
+
+<div class="hobby">
+    <h2>Reading</h2>
+    <figure>
+        <img class="center" src="reading.jpg" alt="A stack of books">
+    </figure>
+    <p>Some of my favorite books are Swanns Way, Jude the Obscure, 100 Years of Solitude and The Magic Mountain.</p>
+</div>
+
+<div class="hobby">
+    <h2>Video Games</h2>
+    <figure>
+        <img class="center" src="stardewvalley.png" alt="Stardew Valley Logo">
+    </figure>
+    <p>I love to play Stardew Valley and Animal Crossing.</p>
+</div>
+
+<div class="hobby">
+    <h2>Hiking</h2>
+    <figure>
+        <img class="center" src="hiking.png" alt="Photo of two people hiking in the mountains">
+    </figure>
+    <p>I grew up hiking. Some of my favorite trails I've done have been in the Ancient Bristlecone National Forest, Yellowstone National Park, Reserva Natural Volcán Mombacho in Nicaragua, and the John Muir Wilderness.</p>
+</div>
