--- a/myfavoritethings.html
+++ b/myfavoritethings.html
@@ -1,3 +1,29 @@
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <title>Hello World: About</title>
+        <meta charset="UTF-8">
+        <link rel="stylesheet" href="styles.css">
+    </head>
+    <body>
+        <nav id="main-navigation">
+            <ul>
+                <li>
+                    <a href="exercise06.html">Home</a>
+                </li>
+                <li>
+                    <a href="myfavoritethings.html">My Hobbies</a>
+                </li>
+                <li>
+                    <a href="https://publicdomainreview.org">My Favorite Website</a>
+                </li>
+                <li>
+                    <a href="about.html">About Me</a>
+                </li>
+            </ul>
+        </nav>
+<body>
+    <h1>My Hobbies</h1>
 <div class="hobby">
     <h2>Knitting</h2>
     <figure>
@@ -29,3 +55,5 @@
     </figure>
     <p>I grew up hiking. Some of my favorite trails I've done have been in the Ancient Bristlecone National Forest, Yellowstone National Park, Reserva Natural Volcán Mombacho in Nicaragua, and the John Muir Wilderness.</p>
 </div>
+</body> 
+</html>
