Refactor navigation structure in about.html

--- a/about.html
+++ b/about.html
@@ -5,20 +5,23 @@
         <link rel="stylesheet" href="styles.css">
         </head>
     <nav>
-      <ul>
-        <li>
-          <a href="exercise04.html">Home</a>
-        </li>
-        <li>
-          <a href="myfavoritethings.html">My Hobbies</a>
-        </li>
-        <li>
-          <a href="https://publicdomainreview.org">My Favorite Website</a>
-        </li>
-        <li>
-          <a href="about.html">About Me</a>
-        </li>
-      </ul>
+   <body>
+        <nav id="main-navigation">
+            <ul>
+                <li>
+                    <a href="exercise06.html">Home</a>
+                </li>
+                <li>
+                    <a href="myfavoritethings.html">My Hobbies</a>
+                </li>
+                <li>
+                    <a href="https://publicdomainreview.org">My Favorite Website</a>
+                </li>
+                <li>
+                    <a href="about.html">About Me</a>
+                </li>
+            </ul>
+        </nav>
     </head>
   <body>
 <article>
