--- a/exercise04.html
+++ b/exercise04.html
@@ -5,21 +5,24 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <nav>
-      <ul>
-        <li>
-          <a href="exercise04.html">Home</a>
-        </li>
-        <li>
-          <a href="myfavoritethings.html">My Hobbies</a>
-        </li>
-        <li>
-          <a href="https://publicdomainreview.org">My Favorite Website</a>
-        </li>
-        <li>
-          <a href="about.html">About Me</a>
-        </li>
-      </ul>
-<body>
+  <body>
+        <nav id="main-navigation">
+            <ul>
+                <li>
+                    <a href="exercise06.html">Home</a>
+                </li>
+                <li>
+                    <a href="myfavoritethings.html">My Hobbies</a>
+                </li>
+                <li>
+                    <a href="https://publicdomainreview.org">My Favorite Website</a>
+                </li>
+                <li>
+                    <a href="about.html">About Me</a>
+                </li>
+            </ul>
+        </nav>
+  </body>body>
     <header>
     <h1>Hello World!</h1>
     <p> Hello World! Welcome to my website.</p>
