Update hobby images in myfavoritethings.html

--- a/myfavoritethings.html
+++ b/myfavoritethings.html
@@ -27,7 +27,7 @@
 <div class="hobby">
     <h2>Knitting</h2>
     <figure>
-        <img class="center" src="knitting.jpg" alt="An image of three knitting projects and knitting needles">
+        <img class="center" src="circular-knitting-needles-yarn-getty-1220-2000-6c1bd931de694bb1b01851e333ed4e38.jpg" alt="An image of three knitting projects and knitting needles">
     </figure>
     <p>I've been knitting for 20 years! I love to make sweaters, hats, and socks.</p>
 </div>
@@ -35,7 +35,7 @@
 <div class="hobby">
     <h2>Reading</h2>
     <figure>
-        <img class="center" src="reading.jpg" alt="A stack of books">
+        <img class="center" src="books.jpg" alt="A stack of books">
     </figure>
     <p>Some of my favorite books are Swanns Way, Jude the Obscure, 100 Years of Solitude and The Magic Mountain.</p>
 </div>
