--- a/exercise07.html
+++ b/exercise07.html
@@ -1,1 +1,101 @@
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <title>Hello World: About</title>
+        <meta charset="UTF-8">
+        <link rel="stylesheet" href="styles.css">
+    </head>
+    <body>
+        <nav id="main-navigation">
+            <ul>
+                <li>
+                    <a href="exercise06.html">Home</a>
+                </li>
+                <li>
+                    <a href="myfavoritethings.html">My Hobbies</a>
+                </li>
+                <li>
+                    <a href="https://publicdomainreview.org">My Favorite Website</a>
+                </li>
+                <li>
+                    <a href="about.html">About Me</a>
+                </li>
+            </ul>
+        </nav>
+    <header>
+    <h1>Hello World!</h1>
+    <p> Hello World! Welcome to my website.</p>
+    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/97/The_Earth_seen_from_Apollo_17.jpg/512px-The_Earth_seen_from_Apollo_17.jpg?20200925203546" alt= "The Earth seen from Apollo 17"  <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/97/The_Earth_seen_from_Apollo_17.jpg/512px-The_Earth_seen_from_Apollo_17.jpg?20200925203546" alt= "The Earth seen from Apollo 17" width="500" height="600" class="center"> 
 
+         <h1>My Hobbies</h1>
+<div class="hobby">
+    <h2>Knitting</h2>
+    <figure>
+        <img class="center" src="circular-knitting-needles-yarn-getty-1220-2000-6c1bd931de694bb1b01851e333ed4e38.jpg" alt="An image of three knitting projects and knitting needles">
+    </figure>
+    <p>I've been knitting for 20 years! I love to make sweaters, hats, and socks.</p>
+</div>
+
+<div class="hobby">
+    <h2>Reading</h2>
+    <figure>
+        <img class="center" src="books.jpg" alt="A stack of books">
+    </figure>
+    <p>Some of my favorite books are Swanns Way, Jude the Obscure, 100 Years of Solitude and The Magic Mountain.</p>
+</div>
+
+<div class="hobby">
+    <h2>Video Games</h2>
+    <figure>
+        <img class="center" src="stardewvalley.png" alt="Stardew Valley Logo">
+    </figure>
+    <p>I love to play Stardew Valley and Animal Crossing.</p>
+</div>
+
+<div class="hobby">
+    <h2>Hiking</h2>
+    <figure>
+        <img class="center" src="hiking.png" alt="Photo of two people hiking in the mountains">
+    </figure>
+    <p>I grew up hiking. Some of my favorite trails I've done have been in the Ancient Bristlecone National Forest, Yellowstone National Park, Reserva Natural Volcán Mombacho in Nicaragua, and the John Muir Wilderness.</p>
+</div>
+
+      <nav id="main-navigation">
+            <ul>
+                <li>
+                    <a href="exercise06.html">Home</a>
+                </li>
+                <li>
+                    <a href="myfavoritethings.html">My Hobbies</a>
+                </li>
+                <li>
+                    <a href="https://publicdomainreview.org">My Favorite Website</a>
+                </li>
+                <li>
+                    <a href="about.html">About Me</a>
+                </li>
+            </ul>
+        </nav>
+    </head>
+  <body>
+<article>
+    <div id="fun-facts">
+                <h2>Fun Facts About Me</h2>
+                <ul>
+                    <li> I work at the Newberry Library</li>
+                    <li> I want to work as an archivist at a textile history institution </li>
+                    <li> I speak Swedish and Spanish fluently </li>
+                    <li>I can knit a sweater in two weeks</li>
+                    <li>My favorite color is green</li>
+                </ul>
+            </div>
+    <div id="author-photo">
+                <h2>Author Photo</h2>
+                <figure>
+                    <img src="nov-2023-prints-00032.jpg" alt="Drawing of a woman made out of books" />
+                </figure>
+            </div>
+    </figure>
+</article>
+  </body>
+</html>
