--- a/exercise07.html
+++ b/exercise07.html
@@ -26,7 +26,7 @@
     <header>
     <h1>Hello World!</h1>
     <p> Hello World! Welcome to my website.</p>
-    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/97/The_Earth_seen_from_Apollo_17.jpg/512px-The_Earth_seen_from_Apollo_17.jpg?20200925203546" alt= "The Earth seen from Apollo 17"  <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/97/The_Earth_seen_from_Apollo_17.jpg/512px-The_Earth_seen_from_Apollo_17.jpg?20200925203546" alt= "The Earth seen from Apollo 17" width="500" height="600" class="center"> 
+    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/97/The_Earth_seen_from_Apollo_17.jpg/512px-The_Earth_seen_from_Apollo_17.jpg?20200925203546" alt= "The Earth seen from Apollo 17"  <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/97/The_Earth_seen_from_Apollo_17.jpg/512px-The_Earth_seen_from_Apollo_17.jpg?20200925203546" alt= "The Earth seen from Apollo 17"  class="center"> 
 
          <h1>My Hobbies</h1>
           <h2>Knitting</h2>
