--- a/exercise05.html
+++ b/exercise05.html
@@ -4,26 +4,28 @@
         <meta charset="UTF-8">
         <link rel="stylesheet" href="styles.css">
     </head>
-    <nav>
-      <ul>
-        <li>
-          <a href="exercise04.html">Home</a>
-        </li>
-        <li>
-          <a href="myfavoritethings.html">My Hobbies</a>
-        </li>
-        <li>
-          <a href="https://publicdomainreview.org">My Favorite Website</a>
-        </li>
-        <li>
-          <a href="about.html">About Me</a>
-        </li>
-      </ul>
+     <header>
+        <nav id="main-navigation">
+            <ul>
+                <li>
+                    <a href="exercise06.html">Home</a>
+                </li>
+                <li>
+                    <a href="myfavoritethings.html">My Hobbies</a>
+                </li>
+                <li>
+                    <a href="https://publicdomainreview.org">My Favorite Website</a>
+                </li>
+                <li>
+                    <a href="about.html">About Me</a>
+                </li>
+            </ul>
+        </nav>
+        </header>
 <body>
-    <header>
+    
     <h1>Hello World!</h1>
     <p> Hello World! Welcome to my website.</p>
     <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/97/The_Earth_seen_from_Apollo_17.jpg/512px-The_Earth_seen_from_Apollo_17.jpg?20200925203546" alt= "The Earth seen from Apollo 17"  <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/97/The_Earth_seen_from_Apollo_17.jpg/512px-The_Earth_seen_from_Apollo_17.jpg?20200925203546" alt= "The Earth seen from Apollo 17" width="500" height="600" class="center"> 
-</header>
 </body>
 </html>
