--- a/exercise07.html
+++ b/exercise07.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="styles.css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
-    <body>
+       <header>
         <nav id="main-navigation">
             <ul>
                 <li>
@@ -23,10 +23,11 @@
                 </li>
             </ul>
         </nav>
-    <header>
+        </header>
+    <body>
     <h1>Hello World!</h1>
     <p> Hello World! Welcome to my website.</p>
     <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/97/The_Earth_seen_from_Apollo_17.jpg/512px-The_Earth_seen_from_Apollo_17.jpg?20200925203546" alt= "The Earth seen from Apollo 17" <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/97/The_Earth_seen_from_Apollo_17.jpg/512px-The_Earth_seen_from_Apollo_17.jpg?20200925203546" alt= "The Earth seen from Apollo 17"  class="center"> 
-<\body>
-    <\html>
-        
+    </body>
+</html>
+
